--- a/currency-app/angular.json
+++ b/currency-app/angular.json
@@ -31,6 +31,12 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/normalize.css/normalize.css",
+              "./node_modules/primeflex/primeflex.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/ngx-spinner/animations/square-jelly-box.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -107,5 +113,8 @@
       }
     }
   },
-  "defaultProject": "currency-app"
+  "defaultProject": "currency-app",
+  "cli": {
+    "analytics": false
+  }
 }
